2010-06-29  Jeffrey Stedfast  <fejj@novell.com>

	* deepzoomimagetilesource.cpp (GetTileLayer): Move the
	GetTileWidth() call outside the loop. Also make sure
	display_rects->len > 0 before entering the code segment.

2010-06-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/pal-gtk.cpp: Log why a dialog failed.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: Verify that HttpResponse::AppendHeader is main-thread only.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: Don't abort if status isn't 200, start the request instead
	(even though the status is a failure status, we might get data we need).
	Always call SetStatus, and compute the status text as the browsers do. We also
	can't call HttpRequest::Started until all headers have been processed, so
	do that the first time we get data.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp|h: CurlDownloaderRequest::AbortImpl: Don't use g_idle_add,
	use EO's AddTickCall instead, which ensures the object doesn't get freed
	before the callback is executed. Also use a callback to close the curl handle,
	since we may already be inside a curl callback and we'll deadlock.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: CurlHttpHandler::GetData: we need to lock the handles list
	as long as we're accessing nodes which are still in the list.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp|h: The lifetime of the curl thread is managed by instance
	data on CurlHttpHandler, so make the thread and related data structures
	instance fields on CurlHttpHandler to make things consistent.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: Curl thread: we need to set the current deployment and
	initialize it for this thread.

2010-06-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: Ensure CallData fields are reffed properly. Make